tests/int/use_command/snapshots/integration__int__use_command__flags__modules_inline_modules_flags_r_e_format_grouped_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - inline_modules
    - "-r"
    - "-e"
    - "--format"
    - grouped
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
inline_modules
 - crate::file_module::greet
 - crate::inline_modules::private_inline::_secret
inline_modules::inner
 - crate::file_module
inline_modules::nested
inline_modules::nested::deep
 - crate::dir_module::greet
inline_modules::outer
 - crate::inline_modules::outer::file_child::greet
inline_modules::outer::file_child
 - crate::empty_module
inline_modules::private_inline

----- stderr -----
