tests/int/use_command/snapshots/integration__int__use_command__flags__modules_lib_flags_r_e_format_grouped.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - lib
    - "-r"
    - "-e"
    - "--format"
    - grouped
---
success: true
exit_code: 0
----- stdout -----
lib
advanced_globs
 - crate::advanced_globs::aliased_module::OriginalStruct
 - crate::advanced_globs::aliased_module::original_name
 - crate::advanced_globs::enum_variants::*
 - crate::advanced_globs::internal::*
 - crate::advanced_globs::layer1::*
 - crate::advanced_globs::macro_module::*
 - crate::advanced_globs::original::*
 - crate::advanced_globs::shadowing::shadowed_func
 - crate::advanced_globs::trait_providers::*
 - crate::advanced_globs::unix_specific::*
 - crate::advanced_globs::windows_specific::*
 - crate::dir_module::child_file
 - crate::dir_module::child_file::greet
 - crate::file_module
 - crate::file_module::greet
 - crate::visibility
 - crate::visibility::pub_mod::greet
advanced_globs::aliased_module
advanced_globs::enum_variants
advanced_globs::internal
advanced_globs::layer1
 - crate::advanced_globs::layer1::layer2::*
advanced_globs::layer1::layer2
 - crate::advanced_globs::layer1::layer2::layer3::*
advanced_globs::layer1::layer2::layer3
advanced_globs::macro_module
advanced_globs::original
advanced_globs::prelude
 - crate::advanced_globs::Consumer
 - crate::advanced_globs::MultiImpl
 - crate::advanced_globs::Provider
 - crate::advanced_globs::Transformer
 - crate::advanced_globs::deep_function
 - crate::advanced_globs::layer1_function
 - crate::advanced_globs::layer2_function
advanced_globs::shadowing
advanced_globs::trait_providers
advanced_globs::unix_specific
advanced_globs::windows_specific
baz
 - crate::foo::bar::*
custom_path
 - crate::aliased
 - crate::item_visibility::PUB_CONST
dir_module
 - crate::inline_modules::nested::deep::value
dir_module::child_dir
 - crate::file_module::greet
dir_module::child_file
 - crate::dir_module::greet
empty_module
file_module
 - crate::nesting
foo
 - crate::foo::bar::public_fn
foo::bar
foo::other
 - crate::foo::bar::*
glob_patterns
 - crate::dir_module
 - crate::dir_module::child_file::greet
 - crate::file_module
 - crate::file_module::greet
 - crate::file_module::nesting_depth
 - crate::glob_patterns::constants::*
 - crate::glob_patterns::mixed_exports::func_one
 - crate::glob_patterns::mixed_exports::func_three
 - crate::glob_patterns::mixed_exports::func_two
 - crate::glob_patterns::mixed_exports::special_function
 - crate::glob_patterns::outer::*
 - crate::glob_patterns::self_ref::*
 - crate::glob_patterns::set_a::*
 - crate::glob_patterns::set_b::*
 - crate::glob_patterns::traits::*
 - crate::glob_patterns::types::*
 - crate::glob_patterns::utilities::*
glob_patterns::constants
glob_patterns::mixed_exports
glob_patterns::outer
 - crate::glob_patterns::outer::inner::*
glob_patterns::outer::inner
glob_patterns::self_ref
glob_patterns::set_a
glob_patterns::set_b
glob_patterns::traits
glob_patterns::types
glob_patterns::utilities
glob_showcase
 - crate::file_module::*
 - crate::glob_showcase::api::*
 - crate::glob_showcase::config::all::*
 - crate::glob_showcase::database::*
 - crate::glob_showcase::errors::*
 - crate::glob_showcase::models::*
 - crate::glob_showcase::traits::*
 - crate::glob_showcase::utils::collection::*
 - crate::glob_showcase::utils::math::*
 - crate::glob_showcase::utils::string::*
 - crate::inline_modules::*
 - crate::nesting::level1::level2::*
glob_showcase::api
glob_showcase::config
glob_showcase::config::all
 - crate::glob_showcase::config::client::*
 - crate::glob_showcase::config::logging::*
 - crate::glob_showcase::config::server::*
glob_showcase::config::client
glob_showcase::config::logging
glob_showcase::config::server
glob_showcase::database
 - crate::glob_showcase::database::connection::*
 - crate::glob_showcase::database::query::*
 - crate::glob_showcase::database::transaction::*
glob_showcase::database::connection
glob_showcase::database::query
glob_showcase::database::transaction
glob_showcase::errors
glob_showcase::models
glob_showcase::prelude
 - crate::glob_showcase::ErrorKind
 - crate::glob_showcase::Status
 - crate::glob_showcase::api::delete_data
 - crate::glob_showcase::api::get_data
 - crate::glob_showcase::api::set_data
 - crate::glob_showcase::database::connect
 - crate::glob_showcase::database::disconnect
 - crate::glob_showcase::database::execute
 - crate::glob_showcase::errors::NotFoundError
 - crate::glob_showcase::errors::ValidationError
 - crate::glob_showcase::models::Comment
 - crate::glob_showcase::models::Post
 - crate::glob_showcase::models::User
 - crate::glob_showcase::traits::Identifiable
 - crate::glob_showcase::traits::Nameable
 - crate::glob_showcase::traits::Validatable
 - crate::glob_showcase::utils::math::add
 - crate::glob_showcase::utils::math::subtract
glob_showcase::traits
glob_showcase::utils
 - crate::glob_showcase::utils::collection::*
 - crate::glob_showcase::utils::math::*
 - crate::glob_showcase::utils::math::add
 - crate::glob_showcase::utils::math::divide
 - crate::glob_showcase::utils::math::multiply
 - crate::glob_showcase::utils::math::subtract
 - crate::glob_showcase::utils::string::*
 - crate::glob_showcase::utils::string::lowercase
 - crate::glob_showcase::utils::string::uppercase
glob_showcase::utils::collection
glob_showcase::utils::math
glob_showcase::utils::string
group_patterns
 - crate::file_module::{*}
 - crate::nesting
 - crate::nesting::level1::level2::level3::deepest
 - crate::nesting::level1::level2::level3::depth
 - crate::nesting::level1::level2::{*}
inline_modules
 - crate::file_module::greet
 - crate::inline_modules::private_inline::_secret
inline_modules::inner
 - crate::file_module
inline_modules::nested
inline_modules::nested::deep
 - crate::dir_module::greet
inline_modules::outer
 - crate::inline_modules::outer::file_child::greet
inline_modules::outer::file_child
 - crate::empty_module
inline_modules::private_inline
item_visibility
 - crate::reexports::Foo
mixed
mixed::file_child
 - crate::custom_path::greet
 - crate::mixed::greet
mixed::inline_child
 - crate::mixed::file_child::greet
nesting
 - crate::inline_modules
nesting::level1
 - crate::nesting::depth
nesting::level1::level2
 - crate::nesting::depth
nesting::level1::level2::level3
 - crate::nesting::depth
 - crate::nesting::level1::depth
 - crate::nesting::level1::level2::depth
no_pub_items
reexports
 - crate::file_module
 - crate::nesting
 - crate::reexports::internal::Baz
 - crate::reexports::internal::Foo
 - crate::reexports::internal::INTERNAL_CONST_A
 - crate::reexports::internal::INTERNAL_CONST_B
 - crate::reexports::internal::InternalEnum
 - crate::reexports::internal::InternalTrait
 - crate::reexports::internal::Qux
 - crate::reexports::internal::Secret
 - crate::reexports::internal::internal_helper_1
 - crate::reexports::internal::internal_helper_2
 - crate::reexports::types::*
reexports::internal
 - crate::item_visibility::PUB_STATIC
reexports::types
 - crate::visibility
uses_empty_glob
 - crate::no_pub_items::*
visibility
 - crate::visibility::inner::uses_restricted
 - crate::visibility::private_mod::deepest_greet
 - crate::visibility::private_mod::greet
 - crate::visibility::pub_crate_mod::greet
 - crate::visibility::pub_crate_mod::parent_greet
 - crate::visibility::pub_mod::greet
 - crate::visibility::pub_super_mod::dir_module_greet
 - crate::visibility::pub_super_mod::greet
 - crate::visibility::restricted_mod::RestrictedConfig
 - crate::visibility::restricted_mod::VERSION
 - crate::visibility::restricted_mod::greet
 - crate::visibility::restricted_mod::nesting_depth
visibility::inner
 - crate::visibility::*
visibility::private_mod
 - crate::nesting::level1::level2::level3
visibility::pub_crate_mod
 - crate::visibility::pub_mod::greet
visibility::pub_mod
 - crate::file_module
visibility::pub_super_mod
 - crate::dir_module::greet
visibility::restricted_mod
 - crate::nesting

----- stderr -----
