tests/int/use_command/snapshots/integration__int__use_command__flags__modules_lib_flags_r_e_format_grouped_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - lib
    - "-r"
    - "-e"
    - "--format"
    - grouped
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
lib
 - crate::empty_module::Standalone
advanced_globs
 - crate::advanced_globs::aliased_module::OriginalStruct
 - crate::advanced_globs::aliased_module::original_name
 - crate::advanced_globs::enum_variants::Color
 - crate::advanced_globs::internal::internal_a
 - crate::advanced_globs::internal::internal_b
 - crate::advanced_globs::internal::internal_c
 - crate::advanced_globs::layer1::layer1_function
 - crate::advanced_globs::layer1::layer2
 - crate::advanced_globs::macro_module::helper
 - crate::advanced_globs::original::OriginalType
 - crate::advanced_globs::original::shadowed_func
 - crate::advanced_globs::original::unique_original
 - crate::advanced_globs::shadowing::shadowed_func
 - crate::advanced_globs::trait_providers::Consumer
 - crate::advanced_globs::trait_providers::Provider
 - crate::advanced_globs::trait_providers::Transformer
 - crate::advanced_globs::unix_specific::PLATFORM_ID
 - crate::advanced_globs::unix_specific::platform_func
 - crate::advanced_globs::windows_specific::PLATFORM_ID
 - crate::advanced_globs::windows_specific::platform_func
 - crate::dir_module::child_file
 - crate::dir_module::child_file::greet
 - crate::file_module
 - crate::file_module::greet
 - crate::visibility
 - crate::visibility::pub_mod::greet
advanced_globs::aliased_module
advanced_globs::enum_variants
advanced_globs::internal
advanced_globs::layer1
 - crate::advanced_globs::layer1::layer2::*
advanced_globs::layer1::layer2
 - crate::advanced_globs::layer1::layer2::layer3::*
advanced_globs::layer1::layer2::layer3
advanced_globs::macro_module
advanced_globs::original
advanced_globs::prelude
 - crate::advanced_globs::Consumer
 - crate::advanced_globs::MultiImpl
 - crate::advanced_globs::Provider
 - crate::advanced_globs::Transformer
 - crate::advanced_globs::deep_function
 - crate::advanced_globs::layer1_function
 - crate::advanced_globs::layer2_function
advanced_globs::shadowing
advanced_globs::trait_providers
advanced_globs::unix_specific
advanced_globs::windows_specific
baz
 - crate::foo::bar::public_fn
crate_root_reexport
 - crate::Standalone
custom_path
 - crate::aliased
 - crate::item_visibility::PUB_CONST
dir_module
 - crate::inline_modules::nested::deep::value
dir_module::child_dir
 - crate::file_module::greet
dir_module::child_file
 - crate::dir_module::greet
empty_module
file_module
 - crate::nesting
 - crate::nesting::depth
foo
 - crate::foo::bar::public_fn
foo::bar
foo::other
 - crate::foo::bar::helper
 - crate::foo::bar::public_fn
glob_patterns
 - crate::dir_module
 - crate::dir_module::child_file::greet
 - crate::file_module
 - crate::file_module::greet
 - crate::file_module::nesting_depth
 - crate::glob_patterns::constants::API_VERSION
 - crate::glob_patterns::constants::DEFAULT_TIMEOUT
 - crate::glob_patterns::constants::MAX_SIZE
 - crate::glob_patterns::constants::MIN_SIZE
 - crate::glob_patterns::mixed_exports::func_one
 - crate::glob_patterns::mixed_exports::func_three
 - crate::glob_patterns::mixed_exports::func_two
 - crate::glob_patterns::mixed_exports::special_function
 - crate::glob_patterns::outer::inner
 - crate::glob_patterns::outer::outer_func
 - crate::glob_patterns::self_ref::self_func_1
 - crate::glob_patterns::self_ref::self_func_2
 - crate::glob_patterns::set_a::common_name
 - crate::glob_patterns::set_a::unique_to_a
 - crate::glob_patterns::set_b::CommonType
 - crate::glob_patterns::set_b::unique_to_b
 - crate::glob_patterns::traits::Greetable
 - crate::glob_patterns::traits::Processable
 - crate::glob_patterns::traits::Serializable
 - crate::glob_patterns::types::Alpha
 - crate::glob_patterns::types::Beta
 - crate::glob_patterns::types::Delta
 - crate::glob_patterns::types::Gamma
 - crate::glob_patterns::types::OptionI32
 - crate::glob_patterns::types::Result
 - crate::glob_patterns::utilities::UTIL_CONST_1
 - crate::glob_patterns::utilities::UTIL_CONST_2
 - crate::glob_patterns::utilities::UtilityEnum
 - crate::glob_patterns::utilities::UtilityStruct
 - crate::glob_patterns::utilities::helper_a
 - crate::glob_patterns::utilities::helper_b
 - crate::glob_patterns::utilities::helper_c
glob_patterns::constants
glob_patterns::mixed_exports
glob_patterns::outer
 - crate::glob_patterns::outer::inner::*
glob_patterns::outer::inner
glob_patterns::self_ref
glob_patterns::set_a
glob_patterns::set_b
glob_patterns::traits
glob_patterns::types
glob_patterns::utilities
glob_showcase
 - crate::file_module::greet
 - crate::file_module::nesting_depth
 - crate::glob_showcase::api::API_ENDPOINT
 - crate::glob_showcase::api::API_MAX_RETRIES
 - crate::glob_showcase::api::API_TIMEOUT
 - crate::glob_showcase::api::clear_all
 - crate::glob_showcase::api::count
 - crate::glob_showcase::api::delete_data
 - crate::glob_showcase::api::exists
 - crate::glob_showcase::api::get_data
 - crate::glob_showcase::api::list_all
 - crate::glob_showcase::api::set_data
 - crate::glob_showcase::api::update_data
 - crate::glob_showcase::config::all::*
 - crate::glob_showcase::database::connection
 - crate::glob_showcase::database::query
 - crate::glob_showcase::database::transaction
 - crate::glob_showcase::errors::AuthenticationError
 - crate::glob_showcase::errors::ErrorKind
 - crate::glob_showcase::errors::NotFoundError
 - crate::glob_showcase::errors::Result
 - crate::glob_showcase::errors::ValidationError
 - crate::glob_showcase::models::Category
 - crate::glob_showcase::models::Comment
 - crate::glob_showcase::models::CommentId
 - crate::glob_showcase::models::Post
 - crate::glob_showcase::models::PostId
 - crate::glob_showcase::models::Status
 - crate::glob_showcase::models::Tag
 - crate::glob_showcase::models::User
 - crate::glob_showcase::models::UserId
 - crate::glob_showcase::traits::Identifiable
 - crate::glob_showcase::traits::Nameable
 - crate::glob_showcase::traits::Serializable
 - crate::glob_showcase::traits::Timestamped
 - crate::glob_showcase::traits::Validatable
 - crate::glob_showcase::utils::collection::*
 - crate::glob_showcase::utils::math::*
 - crate::glob_showcase::utils::string::*
 - crate::inline_modules::inner
 - crate::inline_modules::nested
 - crate::inline_modules::outer
 - crate::inline_modules::sibling_greet
 - crate::inline_modules::use_private
 - crate::nesting::level1::level2::depth
 - crate::nesting::level1::level2::level3
 - crate::nesting::level1::level2::root_depth
glob_showcase::api
glob_showcase::config
glob_showcase::config::all
 - crate::glob_showcase::config::client::*
 - crate::glob_showcase::config::logging::*
 - crate::glob_showcase::config::server::*
glob_showcase::config::client
glob_showcase::config::logging
glob_showcase::config::server
glob_showcase::database
 - crate::glob_showcase::database::connection::*
 - crate::glob_showcase::database::query::*
 - crate::glob_showcase::database::transaction::*
glob_showcase::database::connection
glob_showcase::database::query
glob_showcase::database::transaction
glob_showcase::errors
glob_showcase::models
glob_showcase::prelude
 - crate::glob_showcase::ErrorKind
 - crate::glob_showcase::Status
 - crate::glob_showcase::api::delete_data
 - crate::glob_showcase::api::get_data
 - crate::glob_showcase::api::set_data
 - crate::glob_showcase::database::connect
 - crate::glob_showcase::database::disconnect
 - crate::glob_showcase::database::execute
 - crate::glob_showcase::errors::NotFoundError
 - crate::glob_showcase::errors::ValidationError
 - crate::glob_showcase::models::Comment
 - crate::glob_showcase::models::Post
 - crate::glob_showcase::models::User
 - crate::glob_showcase::traits::Identifiable
 - crate::glob_showcase::traits::Nameable
 - crate::glob_showcase::traits::Validatable
 - crate::glob_showcase::utils::math::add
 - crate::glob_showcase::utils::math::subtract
glob_showcase::traits
glob_showcase::utils
 - crate::glob_showcase::utils::collection::*
 - crate::glob_showcase::utils::math::*
 - crate::glob_showcase::utils::math::add
 - crate::glob_showcase::utils::math::divide
 - crate::glob_showcase::utils::math::multiply
 - crate::glob_showcase::utils::math::subtract
 - crate::glob_showcase::utils::string::*
 - crate::glob_showcase::utils::string::lowercase
 - crate::glob_showcase::utils::string::uppercase
glob_showcase::utils::collection
glob_showcase::utils::math
glob_showcase::utils::string
group_patterns
 - crate::file_module::{*}
 - crate::nesting
 - crate::nesting::level1::level2::level3::deepest
 - crate::nesting::level1::level2::level3::depth
 - crate::nesting::level1::level2::{*}
inline_modules
 - crate::file_module::greet
 - crate::inline_modules::private_inline::_secret
inline_modules::inner
 - crate::file_module
 - crate::file_module::greet
inline_modules::nested
inline_modules::nested::deep
 - crate::dir_module::greet
inline_modules::outer
 - crate::inline_modules::outer::file_child::greet
inline_modules::outer::file_child
 - crate::no_pub_items
 - crate::no_pub_items::exercise_private
inline_modules::private_inline
item_visibility
 - crate::reexports::Foo
mixed
mixed::file_child
 - crate::custom_path::greet
 - crate::mixed::greet
mixed::inline_child
 - crate::mixed::file_child::greet
nesting
 - crate::inline_modules
 - crate::inline_modules::nested::deep::value
nesting::level1
 - crate::nesting::depth
nesting::level1::level2
 - crate::nesting::depth
nesting::level1::level2::level3
 - crate::nesting::depth
 - crate::nesting::level1::depth
 - crate::nesting::level1::level2::depth
no_pub_items
reexports
 - crate::file_module
 - crate::file_module::greet
 - crate::nesting
 - crate::nesting::depth
 - crate::reexports::internal::Baz
 - crate::reexports::internal::Foo
 - crate::reexports::internal::INTERNAL_CONST_A
 - crate::reexports::internal::INTERNAL_CONST_B
 - crate::reexports::internal::InternalEnum
 - crate::reexports::internal::InternalTrait
 - crate::reexports::internal::Qux
 - crate::reexports::internal::Secret
 - crate::reexports::internal::internal_helper_1
 - crate::reexports::internal::internal_helper_2
 - crate::reexports::types::TYPE_CONST_1
 - crate::reexports::types::TYPE_CONST_2
 - crate::reexports::types::TypeA
 - crate::reexports::types::TypeB
 - crate::reexports::types::TypeC
 - crate::reexports::types::TypeContainer
 - crate::reexports::types::TypeD
 - crate::reexports::types::TypeE
 - crate::reexports::types::TypeTrait
 - crate::reexports::types::type_helper_a
 - crate::reexports::types::type_helper_b
 - crate::reexports::types::visibility_greet
reexports::internal
 - crate::item_visibility::PUB_STATIC
reexports::types
 - crate::visibility
 - crate::visibility::pub_mod::greet
uses_empty_glob
 - crate::no_pub_items::exercise_private
visibility
 - crate::visibility::inner::uses_restricted
 - crate::visibility::private_mod::deepest_greet
 - crate::visibility::private_mod::greet
 - crate::visibility::pub_crate_mod::greet
 - crate::visibility::pub_crate_mod::parent_greet
 - crate::visibility::pub_mod::greet
 - crate::visibility::pub_super_mod::dir_module_greet
 - crate::visibility::pub_super_mod::greet
 - crate::visibility::restricted_mod::RestrictedConfig
 - crate::visibility::restricted_mod::VERSION
 - crate::visibility::restricted_mod::greet
 - crate::visibility::restricted_mod::nesting_depth
visibility::inner
 - crate::visibility::InternalState
 - crate::visibility::demonstrate_access
 - crate::visibility::inner
 - crate::visibility::internal_helper
 - crate::visibility::pub_crate_mod
 - crate::visibility::pub_mod
 - crate::visibility::pub_super_mod
 - crate::visibility::restricted_mod
visibility::private_mod
 - crate::nesting::level1::level2::level3
visibility::pub_crate_mod
 - crate::visibility::pub_mod::greet
visibility::pub_mod
 - crate::file_module
 - crate::file_module::greet
visibility::pub_super_mod
 - crate::dir_module::greet
visibility::restricted_mod
 - crate::nesting
 - crate::nesting::depth

----- stderr -----
